<resources>
    <string name="app_name">AndroidTest</string>
    <string name="sing_in_text">Sign in</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_collaborator">Mis Colaboradores</string>
    <string name="add_collaborators">Agregar Colaborador</string>
    <string name="welcome_text">Bienvenido %1$s \nUsuario:%2$s</string>
    <string name="main">Inicio</string>
    <string name="write_name">Escribe tu nombre</string>
    <string name="write_email">Escribe tu correo electronico</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="message">Message</string>
    <string name="follow">Follow</string>
    <string name="collections">Collections</string>
    <string name="photos">Photos</string>
    <string name="likes">Likes</string>
    <string name="no_pictues">No pictures to show</string>
    <string name="favorite">Favorites</string>
    <string name="no_description">No description</string>
    <string name="search_title">Search</string>
    <string name="location">Location</string>
    <string name="settings">Settings</string>
    <string name="sing_out">Sign out</string>

</resources>