<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        tool:src="@drawable/ic_add"
        tool:background="@color/colorPrimary"
        app:civ_border_width="6dp"
        app:civ_border_color="@color/colorPrimaryTextColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/name_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

       style="@style/TextView_User_Name"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tool:text="Angelica Mathews"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        style="@style/TextView_Description"
        app:layout_constraintTop_toBottomOf="@id/name_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tool:text="Angelica Mathews"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/message_btn"
        android:layout_width="@dimen/bton_width_home"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:layout_marginEnd="30dp"
        style="@style/Buttom_Style"
        app:layout_constraintTop_toBottomOf="@+id/description"
        app:layout_constraintEnd_toStartOf="@+id/view_div"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/follow_btn"
        android:layout_width="@dimen/bton_width_home"
        android:layout_height="wrap_content"
        android:text="@string/follow"
        android:layout_marginStart="30dp"
        style="@style/Buttom_Style"
        app:layout_constraintTop_toBottomOf="@+id/description"
        app:layout_constraintStart_toEndOf="@+id/view_div"
        />
    <View
        android:id="@+id/view_div"
        android:layout_width="1dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@+id/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/edit_text_collections"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tool:text="10"
        style="@style/TextView_Numbers"
        app:layout_constraintTop_toBottomOf="@+id/view_div"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/edit_text_collections_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/collections"
        style="@style/TextView_Title"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_collections"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/edit_text_photos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tool:text="197"
        style="@style/TextView_Numbers"
        app:layout_constraintTop_toBottomOf="@+id/view_div"
        app:layout_constraintStart_toStartOf="@id/message_btn"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/edit_text_photos_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/photos"
        style="@style/TextView_Title"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_collections"
        app:layout_constraintStart_toStartOf="@id/message_btn"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/edit_text_likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextView_Numbers"
        tool:text="124"
        app:layout_constraintTop_toBottomOf="@+id/view_div"
        app:layout_constraintEnd_toEndOf="@id/follow_btn"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/edit_text_likes_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/likes"
        style="@style/TextView_Title"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_collections"
        app:layout_constraintEnd_toEndOf="@id/follow_btn"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/edit_text_location_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        tool:text="New York, USA"
        style="@style/TextView_Location"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_collections_title"
        app:layout_constraintStart_toStartOf="@id/edit_text_collections_title"
        />
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/location_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:src="@drawable/baseline_location_on_black_24"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_collections_title"
        app:layout_constraintStart_toEndOf="@+id/edit_text_photos_title"
        />
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_social_networks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="@dimen/width_icon_social_media"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_location_title"
        app:layout_constraintStart_toStartOf="@+id/location_icon"

        >
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_facebook"
            android:layout_width="@dimen/width_icon_social_media"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_facebook"
            android:layout_marginEnd="@dimen/width_icon_social_media"
            />
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_twitter"
            android:layout_width="@dimen/width_icon_social_media"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_twitter"
            android:layout_marginEnd="@dimen/width_icon_social_media"

            />
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_linkedin"
            android:layout_width="@dimen/width_icon_social_media"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_linkedin"
            android:layout_marginEnd="@dimen/width_icon_social_media"

            />
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_instagram"
            android:layout_width="@dimen/width_icon_social_media"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_instagram"
            android:layout_marginEnd="@dimen/width_icon_social_media"

            />

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>